--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -1,4 +1,5 @@
 @import "cards";
+@import "mapMarker";
 
 body {
   background-color: white;
@@ -35,9 +36,4 @@ body {
   }
 }
 
-.marker {
-  height: 20px;
-  width: 20px;
-  background-color: red;
-  border-radius: 50%;
-}
+
